fixed media tile spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -117,7 +117,8 @@ blockquote cite:before {
 .flex-ribbon {
   display: flex;
   flex-direction: row;
-  align-content: space-between;
+  align-content: flex-start;
+  justify-content: space-around;
   align-items: stretch;
   flex-wrap: wrap;
   margin-top: 1em;
